# padthv1-universal

./: .gitmodules  CMakeLists.txt  README.md
cmake/: BuildFFTW3.cmake
plugin/: CMakeLists.txt  DistrhoPluginInfo.h  padthv1_dpf.cpp  padthv1_dpf.h  padthv1_dpfui.cpp  padthv1_dpfui.h  padthv1_param.cpp  padthv1_param.h  padthv1widget_dpf.cpp  padthv1widget_dpf.h
